# HardLinkCpp

./: .gitignore  CMakeLists.txt  README.md  build.ps1  compile_commands.json  meson.build  reconfigure.ps1
include/: argparser.h  linker.h  linkfiles.h  logger.h  utils.h
src/: argparser.cpp  linker.cpp  linkfiles.cpp  logger.cpp  main.cpp  utils.cpp
